# symbolic-controls-toolbox

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.dev  README.md  STYLE.md  Symbolic Controls Toolbox.mltbx  Symbolic Controls Toolbox.prj  demos.xml  runTests.m
cmake/: FindCython.cmake
ctrlanalysis/: ctrbs.m  ishurwitz.m  islinear.m  islipschitz.m  obsvs.m  phaseport.m  pole.m  rhtable.m  schurs.m  schurs.m~  stm.m  zero.m
ctrlanalysis/@symss/: c2d.m  canon.m  ctrb.m  decompose.m  elasticroa.m  elroa.m  expm.m  iscontrollable.m  isobservable.m  linearize.m  lyap.m  lyap.m~  obsv.m  reach.m  roa.m
ctrlanalysis/properties/: iscontdiff.m  issquare.m
ctrldemos/: ball.m  buildhelp.m  ctrldemo.m  elastic_roa_example.m  example3.m  example4.m  example5.m  example6.m  fireflies.m  linear_response_example.m  lqr_example.m  massspring2.m  pendulum.m  pendulum3.m  pendulum4.m  thermostat.m  vanderpol2.m
ctrldemos/html/: elastic_roa_example.html
ctrldemos/private/: ball.mat  fireflies.mat  massspring2.mat  pendulum.mat  pendulum2.m  pendulum2.mat  pendulum3.mat  pendulum4.mat  savedemo.m  thermostat.mat  vanderpol.m  vanderpol.mat  vanderpol2.mat
ctrldesign/@symss/: care.m  dare.m  lqr.m  lyapctrl.m  place.m  slide.m  slidectrl.m
ctrllib/@symopt/: lagrangian.m  symopt.m
ctrllib/@symss/: care.m  dare.m  lyap.m
ctrlmodels/: eom2symss.m  symssTest.m  symtfTest.m
ctrlmodels/@mdp/: dspace.m  itervalue.m  mdp.m  propp.m  propr.m  propr2.m
ctrlmodels/@symhyss/: subs.m  symhyss.m
ctrlmodels/@symss/: canon.m  ctrb.m  expm.m  impulse.m  linearize.m  lsim.m  obsv.m  simplify.m  simtrans.m  step.m  subs.m  symss.m  symss2symss.m  symss2symtf.m  validatesystem.m
ctrlmodels/@symtf/: subs.m  symtf.m  symtf2symss.m
ctrlmodels/private/: getSymbolicDerivatives.m  getsymdiff.m
ctrlplots/: gettsdata.m  plottsdata.m
ctrlplots/@symss/: effort.m  effort.m~  hysim.m  impulse.m  initial.m  lsim.m  mdpsim.m  nlsim.m  nlsim2.m  step.m  zir.m  zsr.m
doc/examples/: backward_reachability_example.m  bouncing_ball_example.m  hybrid_system_response_example.m  kalman_decomposition_example.m  linear_response_example.m  lqr_example.m  mdp_example.m  sliding_mode_control_example.m  tunnel_diode_response_example.m
examples/: matlab_linalg.m
helpsearch-v3/: _0.cfe  _0.cfs  _0.si
math/: CMakeLists.txt  assert.hpp  c_wrapper_math.cc  c_wrapper_math.hpp  math.cc  math.hpp
math/matrix/: assert.hpp  block.hpp  constant.hpp  dense.hpp  dense_sym.hpp  expr.hpp  expr_add.hpp  expr_equal.hpp  expr_inverse.hpp  expr_jacobian.hpp  expr_mul.hpp  expr_neg.hpp  expr_sub.hpp  expr_transpose.hpp  expression.hpp  matrix.hpp  operation.hpp  sparse.hpp  static.hpp  symbolic.hpp  symbolic_dense.hpp  symbolic_vector.hpp  vector.hpp  vector_sym.hpp
math/traits/: is_dense.hpp  is_dense_matrix.hpp  is_expr.hpp  is_matrix.hpp  is_scalar.hpp  is_static.hpp  is_symbolic.hpp  is_vector.hpp
matlab/: CMakeLists.txt  README.md  loadlibcontrols.m  loadmatctrl.m  matlab_wrapper.c  matlab_wrapper.cc  matlab_wrapper.h  matlab_wrapper.hpp  startup.m
matlab/ctrlmodels/@mdp/: mdp.m
matlab/ctrlmodels/@statespace/: statespace.m
matlab/matctrl/+symctrl/: hess.m  mat2se.m  schur.m
matlab/matctrl/@mdp/: mdp.m
matlab/matctrl/@randomdevice/: randomdevice.m
matlab/matctrl/@randomdistribution/: randomdistribution.m
matlab/matctrl/@randomvar/: randomvar.m
matlab/matctrl/@statespace/: ode_euler.m  statespace.m
matlab/matctrl/@transferfunction/: transferfunction.m
matlab/models/@mdp/: mdp.m
matlab/models/@statespace/: statespace.m
matlab/symctrl/+symctrl/: eig.m  hess.m  schur.m
matlab/symctrl/@mdp/: mdp.m
matlab/test/: CMakeLists.txt  test_ode.m  test_random_variable.m  test_state_space.m  test_statespace.m  test_transfer_function.m
models/: CMakeLists.txt  README.md  analysis.cc  analysis.hpp  c_wrapper.cc  c_wrapper.hpp  control_model.cc  control_model.hpp  hybrid_system.hpp  mdp.cc  mdp.hpp  state_space.cc  state_space.hpp  system.cc  system.hpp  transfer_function.cc  transfer_function.hpp
models/utils/: eig.cc  eig.hpp  sparse_matrix.hpp
python/: CMakeLists.txt  README.md  __init__.py  py_wrapper.cc  py_wrapper.hpp  py_wrapper.pyx  pyctrl.pxd  pyctrl.pyx  setup.py
src/: CMakeLists.txt  c_wrapper.cc  c_wrapper.hpp
src/models/: control_model.hpp  state_space.cc  state_space.h  state_space.hpp  system.hpp  transfer_function.cc  transfer_function.h  transfer_function.hpp
symctrl/: CMakeLists.txt  analysis.cc  analysis.hpp  assert.hpp  c_wrapper.cc  c_wrapper.hpp  canonical.cc  canonical.hpp  controller.cc  controller.hpp  cost_function.hpp  function.hpp  hybrid_system.hpp  kernel.hpp  mdp.cc  mdp.hpp  mdp_train.cc  mdp_train.hpp  random_distribution.cc  random_distribution.hpp  random_variable.hpp  state_space.cc  state_space.hpp  subs.hpp  system.hpp  transfer_function.cc  transfer_function.hpp  transition_function.hpp  visitor.cc  visitor.hpp
symctrl/math/: expression.hpp  functor.hpp  math.hpp  matrix.hpp  random.hpp  symbolic.hpp
symctrl/matrix/: dense.hpp  eig.cc  eig.hpp  hessenberg.cc  house.cc  linalg.cc  linalg.hpp  qr.cc  schur.cc  sparse.hpp
symctrl/ode/: euler.cc  euler.hpp  ode.hpp  ode_options.hpp  ode_sim.hpp  rk45.hpp
symctrl/shims/: default.hpp  symbolic.hpp
symctrl/systems/: statespace.hpp  system.hpp  transferfunction.hpp  visitor.hpp
symctrl/traits/: functor_traits.hpp  is_constant.hpp  is_dense.hpp  is_expr.hpp  is_matrix.hpp  is_scalar.hpp  is_symbolic.hpp  is_vector.hpp
test/: CMakeLists.txt  canonTest.m  careTest.m  lyapTest.m  lyapctrlTest.m  symhyssTest.m  symssTest.m  test_analysis.cc  test_dense_matrix.cc  test_function.cc  test_kernel.cc  test_matrix.cc  test_matrix_block.cc  test_matrix_constant.cc  test_matrix_dense.cc  test_matrix_operations.cc  test_matrix_static.cc  test_matrix_vector.cc  test_mdp.cc  test_ode.cc  test_random_variable.cc  test_state_space.cc  test_statespace.cc  test_symbolic_number.cc  test_symbolic_type.cc  test_symbolic_variable.cc  test_transferfunction.cc  test_type_traits.cc
(+165 files in other folders)
